header + all all pages

--- a/pages/docs.html
+++ b/pages/docs.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css"> 
+    <link rel="stylesheet" href="./docs.css"> 
     <title>Детский семейный центр "Живое пространство"</title>
     </head>
     <body class="body">
@@ -13,13 +13,13 @@
                 <h2 class="header__background_subtitle">Детский семейный центр</h2>
             </div>
             <nav class="header__navigation">
-                <a href="../index.html" class="header__navigation_logo"><img src="./Src/logo.png"></a>
+                <a href="../index.html" class="header__navigation_logo"><img src="../Src/logo.png"></a>
                 <div class='header__navigation_links'>
-                    <a href="./index.html" class="header__navigation_link">Главная</a>
-                    <a href="./pages/info.html" class="header__navigation_link">О нас</a>
-                    <a href="./pages/gallery.html" class="header__navigation_link">Галерея</a>
-                    <a href="./pages/contacts.html" class="header__navigation_link">Контакты</a>
-                    <a href="./pages/docs.html" class="header__navigation_link">Документы</a>
+                    <a href="../index.html" class="header__navigation_link">Главная</a>
+                    <a href="./info.html" class="header__navigation_link">О нас</a>
+                    <a href="./gallery.html" class="header__navigation_link">Галерея</a>
+                    <a href="./contacts.html" class="header__navigation_link">Контакты</a>
+                    <a href="./docs.html" class="header__navigation_link">Документы</a>
                 </div>
                 
             </nav>
