--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -20,14 +20,32 @@
                     <a href="./gallery.html" class="header__navigation_link">Галерея</a>
                     <a href="./contacts.html" class="header__navigation_link">Контакты</a>
                     <a href="./docs.html" class="header__navigation_link">Документы</a>
-                </div>
-                
+                </div>   
             </nav>
         </header> 
-       <main class="main">
-
-
-       </main>
-       
+        <main class="main">
+            <section class="contacts">
+                <h2 class="contacts__title">Контакты</h2>
+                <p class="contacts__text">
+                    г. Челябинск, ул.Цвиллинга, 62;<br>
+                    Tел./WhatsApp/Viber/Telegram: +7 (922) 730-02-04;<br>            
+                    E-mail: zp.174@mail.ru;<br>
+                    Vkontakte:<a href="https://vk.com/zhivoeprostranstvo" class="contacts__link">zhivoe_prostranstvo</a>;<br>
+                    Instagram: <a href="https://www.instagram.com/zhivoe_prostranstvo/" class="contacts__link">zhivoe_prostranstvo</a>;          
+                </p>
+                <div class="contacts__map">
+                    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aa1cf3fed102767cdb314aadd1f50d675ed38ea731edac03ce6c856fba90495cf&amp;source=constructor" width="900" height="520" frameborder="0"></iframe>
+                </div>
+            </section>
+        </main>
+        <footer class="footer">
+            <p class="footer__contacts">
+                г. Челябинск, ул. Цвиллинга, 62.<br>
+                тел. +7 (922) 730-02-04;
+            </p>
+            <p class="footer__copyright">
+                © 2021 — Живое Пространство
+            </p>
+        </footer>
     </body>
 </html>
