--- a/index.html
+++ b/index.html
@@ -25,9 +25,16 @@
             </nav>
         </header> 
        <main class="main">
-
-
+            
        </main>
-       
+       <footer class="footer">
+        <p class="footer__contacts">
+            г. Челябинск, ул. Цвиллинга, 62.<br>
+            тел. +7 (922) 730-02-04;
+        </p>
+        <p class="footer__copyright">
+            © 2021 — Живое Пространство
+        </p>
+        </footer>
     </body>
 </html>
