--- a/pages/docs.html
+++ b/pages/docs.html
@@ -24,10 +24,18 @@
                 
             </nav>
         </header> 
-       <main class="main">
+        <main class="main">
 
 
-       </main>
-       
+        </main>
+        <footer class="footer">
+            <p class="footer__contacts">
+                г. Челябинск, ул. Цвиллинга, 62.<br>
+                тел. +7 (922) 730-02-04;
+            </p>
+            <p class="footer__copyright">
+                © 2021 — Живое Пространство
+            </p>
+        </footer>
     </body>
 </html>
