--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -28,6 +28,14 @@
 
 
        </main>
-       
+       <footer class="footer">
+        <p class="footer__contacts">
+            г. Челябинск, ул. Цвиллинга, 62.<br>
+            тел. +7 (922) 730-02-04;
+        </p>
+        <p class="footer__copyright">
+            © 2021 — Живое Пространство
+        </p>
+        </footer>
     </body>
 </html>
