--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <h2 class="header__background_subtitle">Детский семейный центр</h2>
             </div>
             <nav class="header__navigation">
-                <a href="../index.html" class="header__navigation_logo"><img src="./Src/logo.png"></a>
+                <a href="../index.html" class="header__navigation_logo"></a>
                 <div class='header__navigation_links'>
                     <a href="./index.html" class="header__navigation_link">Главная</a>
                     <a href="./pages/info.html" class="header__navigation_link">О нас</a>
