--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -13,7 +13,7 @@
                 <h2 class="header__background_subtitle">Детский семейный центр</h2>
             </div>
             <nav class="header__navigation">
-                <a href="../index.html" class="header__navigation_logo"><img src="../Src/logo.png"></a>
+                <a href="../index.html" class="header__navigation_logo"></a>
                 <div class='header__navigation_links'>
                     <a href="../index.html" class="header__navigation_link">Главная</a>
                     <a href="./info.html" class="header__navigation_link">О нас</a>
@@ -30,8 +30,8 @@
                     г. Челябинск, ул.Цвиллинга, 62;<br>
                     Tел./WhatsApp/Viber/Telegram: +7 (922) 730-02-04;<br>            
                     E-mail: zp.174@mail.ru;<br>
-                    Vkontakte:<a href="https://vk.com/zhivoeprostranstvo" class="contacts__link">zhivoe_prostranstvo</a>;<br>
-                    Instagram: <a href="https://www.instagram.com/zhivoe_prostranstvo/" class="contacts__link">zhivoe_prostranstvo</a>;          
+                    Vkontakte:<a href="https://vk.com/zhivoeprostranstvo" class="contacts__link" target="_blank">zhivoe_prostranstvo</a>;<br>
+                    Instagram: <a href="https://www.instagram.com/zhivoe_prostranstvo/" class="contacts__link" target="_blank">zhivoe_prostranstvo</a>;          
                 </p>
                 <div class="contacts__map">
                     <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aa1cf3fed102767cdb314aadd1f50d675ed38ea731edac03ce6c856fba90495cf&amp;source=constructor" width="900" height="520" frameborder="0"></iframe>
