--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="./pages/info.html" class="header__navigation_link">О нас</a>
                     <a href="./pages/gallery.html" class="header__navigation_link">Галерея</a>
                     <a href="./pages/contacts.html" class="header__navigation_link">Контакты</a>
-                    <a href="./pages/docs.html" class="header__navigation_link">Документы</a>
+                    <a href="./pages/documents.html" class="header__navigation_link">Документы</a>
                 </div>
                 
             </nav>
