--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -19,7 +19,7 @@
                     <a href="./info.html" class="header__navigation_link">О нас</a>
                     <a href="./gallery.html" class="header__navigation_link">Галерея</a>
                     <a href="./contacts.html" class="header__navigation_link">Контакты</a>
-                    <a href="./docs.html" class="header__navigation_link">Документы</a>
+                    <a href="./documents.html" class="header__navigation_link">Документы</a>
                 </div>   
             </nav>
         </header> 
